--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Generate a <br><span> Random Password</span></h1>
         <div id="display">
             <input type="text"  id="password" placeholder="Password">
-            <img src="copy.png" >
+            <img src="copy.png" onclick="copy()">
         </div>
         <button onclick="createPassword()">
             <img src="generate.png">
@@ -42,6 +42,11 @@
             password+=allChars[Math.floor(Math.random()* allChars.length)];
         }
         passwordBox.value=password;
+      }
+
+      function copy(){
+        passwordBox.select();
+        document.execCommand("copy");
       }
 
     </script>
